<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragments.InfoFragment">

    <TextView
        android:id="@+id/details_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details"
        android:textColor="@color/textColor"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:fontFamily="sans-serif-light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/humidity_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/humidity"
        android:fontFamily="sans-serif-thin"
        android:textColor="@color/textColor"
        app:layout_constraintEnd_toStartOf="@+id/humidity_value_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_text" />

    <TextView
        android:id="@+id/humidity_value_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_63"
        android:fontFamily="sans-serif-thin"
        android:textColor="@color/textColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/humidity_text"
        app:layout_constraintTop_toBottomOf="@+id/details_text" />

    <TextView
        android:id="@+id/pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pressure"
        android:fontFamily="sans-serif-thin"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/pressure_value_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/humidity_text" />

    <TextView
        android:id="@+id/pressure_value_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1022_41"
        android:fontFamily="sans-serif-thin"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pressure"
        app:layout_constraintTop_toBottomOf="@+id/humidity_value_text" />
</androidx.constraintlayout.widget.ConstraintLayout>