<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="2dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/daily_date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/friday_29_11"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toTopOf="@id/daily_weather_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/daily_weather_icon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/daily_description_text"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/daily_date_text"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/daily_description_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/clouds_and_sunny_spells"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toBottomOf="@+id/daily_weather_icon"
        app:layout_constraintEnd_toStartOf="@+id/min_temp"
        app:layout_constraintHorizontal_weight="5"
        app:layout_constraintStart_toEndOf="@+id/daily_weather_icon"
        app:layout_constraintTop_toTopOf="@+id/daily_weather_icon" />

    <TextView
        android:id="@+id/min_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/_29"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toBottomOf="@+id/daily_description_text"
        app:layout_constraintEnd_toStartOf="@+id/slash_text"
        app:layout_constraintStart_toEndOf="@+id/daily_description_text"
        app:layout_constraintTop_toTopOf="@+id/daily_description_text"
        tools:layout_editor_absoluteX="208dp" />

    <TextView
        android:id="@+id/max_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/_29"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toBottomOf="@+id/slash_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/slash_text"
        app:layout_constraintTop_toTopOf="@+id/slash_text" />

    <TextView
        android:id="@+id/slash_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/slash"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toBottomOf="@+id/min_temp"
        app:layout_constraintEnd_toStartOf="@+id/max_temp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/min_temp"
        app:layout_constraintTop_toTopOf="@+id/min_temp" />
</androidx.constraintlayout.widget.ConstraintLayout>